--- a/package.json
+++ b/package.json
@@ -1,35 +1,58 @@
 {
-  "name": "angelhackSiliconValley",
-  "version": "1.0.0",
-  "main": "server/server.js",
-  "engines": {
-    "node": ">=4"
-  },
+  "name": "sygnal",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "lint": "eslint .",
-    "start": "node .",
-    "posttest": "npm run lint && nsp check"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "ios-open": "open ios/*.xcodeproj",
+    "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
+    "android": "node node_modules/react-native/local-cli/cli.js run-android",
+    "link": "node node_modules/react-native/local-cli/cli.js link",
+    "lint": "eslint src test *.js",
+    "test": "mocha --recursive --compilers js:babel-core/register -r test/setup",
+    "cover": "nyc npm test",
+    "remotedev": "remotedev-debugger --injectserver",
+    "postinstall": "npm run link && npm run remotedev && rndebugger-open"
+  },
+  "remotedev": {
+    "hostname": "localhost",
+    "port": 5678
   },
   "dependencies": {
-    "compression": "^1.0.3",
-    "cors": "^2.5.2",
-    "helmet": "^1.3.0",
-    "loopback": "^3.0.0",
-    "loopback-boot": "^2.6.5",
-    "loopback-component-explorer": "^4.0.0",
-    "loopback-connector-mongodb": "^1.18.1",
-    "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^2.0.0"
+    "immutable": "^3.7.6",
+    "lodash": "^4.3.0",
+    "react": "^15.3.2",
+    "react-native": "0.35.0",
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
-    "eslint": "^3.17.1",
-    "eslint-config-loopback": "^8.0.0",
-    "nsp": "^2.1.0"
-  },
-  "repository": {
-    "type": "",
-    "url": ""
-  },
-  "license": "UNLICENSED",
-  "description": "angelhackSiliconValley"
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.2",
+    "babel-eslint": "^6.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.5.0",
+    "babel-preset-react-native": "^1.4.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.0.0",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
+    "immutable-devtools": "0.0.7",
+    "jsdom": "^9.4.1",
+    "mocha": "^3.0.1",
+    "node-fetch": "^1.3.3",
+    "nyc": "^8.1.0",
+    "proxyquire": "^1.7.4",
+    "react-addons-test-utils": "15.3.2",
+    "react-dom": "^15.3.2",
+    "react-native-debugger-open": "^0.3.0",
+    "react-native-mock": "^0.2.3",
+    "remote-redux-devtools": "^0.4.1",
+    "remote-redux-devtools-on-debugger": "^0.6.0",
+    "sinon": "^1.17.2"
+  }
 }
