map not showing up, otherwise ok

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.4",
     "file-loader": "^1.0.0",
+    "google-maps-react": "^1.1.0",
     "jquery": "^3.2.1",
     "material-ui": "^0.18.7",
     "materialize-css": "^0.100.1",
