--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jquery": "^3.2.1",
     "material-ui": "^0.18.7",
     "materialize-css": "^0.100.1",
+    "node-wifi": "^1.2.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
