--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
     "draft-js": "^0.10.1",
     "draft-js-custom-styles": "^1.3.1",
     "ejs": "^2.5.6",
