--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "electron-react-quick-start",
+  "name": "Sygnal",
   "version": "1.0.0",
-  "description": "A minimal Electron application with React and Express",
-  "main": "main.js",
+  "description": "Wifi-sharing",
   "scripts": {
-    "dev": "concurrently -k \"npm run devWebpack\" \"npm run devServer\"",
+    "start": "concurrently -k \"npm run devWebpack\" \"npm run devServer\"",
     "devWebpack": "webpack-dev-server --content-base build/",
     "devServer": "nodemon --watch backend backend/server.js",
     "webpack": "webpack",
-    "prodWebpack": "webpack -p",
-    "start": "node backend/server.js"
+    "prodWebpack": "webpack -p"
   },
   "repository": "",
   "keywords": [],
@@ -35,18 +33,33 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^6.1.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.2",
+    "concurrently": "^3.5.0",
+    "cors": "^2.8.4",
+    "css-loader": "^0.28.4",
     "draft-js": "^0.10.1",
     "draft-js-custom-styles": "^1.3.1",
     "ejs": "^2.5.6",
+    "electron": "~1.6.2",
+    "eslint": "^3.0.1",
+    "eslint-plugin-react": "^5.2.2",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
     "file-loader": "^1.0.0",
     "google-maps-react": "^1.1.0",
+    "img-loader": "^2.0.0",
     "jquery": "^3.2.1",
+    "loglevel": "^1.4.1",
     "material-ui": "^0.18.7",
     "materialize-css": "^0.100.1",
+    "mongoose": "^4.11.5",
     "node-wifi": "^1.2.5",
+    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
@@ -56,6 +69,9 @@
     "react-motion": "^0.5.0",
     "react-router-dom": "^4.1.2",
     "react-tap-event-plugin": "^2.0.1",
-    "url-loader": "^0.5.9"
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.6.0"
   }
 }
