--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-router-dom": "^4.1.2",
     "react-tap-event-plugin": "^2.0.1",
     "style-loader": "^0.18.2",
+    "through2": "^2.0.3",
     "url-loader": "^0.5.9",
     "webpack": "^2.7.0",
     "webpack-dev-server": "^2.6.0"
