--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Wifi-sharing",
   "scripts": {
-    "start": "concurrently -k \"npm run devWebpack\" \"npm run devServer\"",
+    "start": "concurrently -k \"npm run prodWebpack\" \"npm run devServer\"",
     "devWebpack": "webpack-dev-server --content-base build/",
     "devServer": "nodemon --watch backend backend/server.js",
     "webpack": "webpack",
